--- a/src/CtenarskyDenik-Projekt/CtenarskyDenik.WebApi/CtenarskyDenik.WebApi.csproj
+++ b/src/CtenarskyDenik-Projekt/CtenarskyDenik.WebApi/CtenarskyDenik.WebApi.csproj
@@ -1,16 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <ItemGroup>
-    <ProjectReference Include="..\CtenarskyDenik.Core\CtenarskyDenik.Core.csproj" />
-    <ProjectReference Include="..\CtenarskyDenik.Persistence\CtenarskyDenik.Persistence.csproj" />
-    <ProjectReference Include="..\CtenarskyDenik.Application\CtenarskyDenik.Application.csproj" />
-    <ProjectReference Include="..\CtenarskyDenik.Infrastructure\CtenarskyDenik.Infrastructure.csproj" />
-  </ItemGroup>
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+  </ItemGroup>
 
 </Project>
