--- a/src/CtenarskyDenik/CtenarskyDenik.Persistence/CtenarskyDenik.Persistence.csproj
+++ b/src/CtenarskyDenik/CtenarskyDenik.Persistence/CtenarskyDenik.Persistence.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
+    <PackageReference Include="MySql.Data" Version="9.2.0" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CtenarskyDenik.Core\CtenarskyDenik.Core.csproj" />
+  </ItemGroup>
+
 </Project>
