--- a/src/CtenarskyDenik/CtenarskyDenik.WebApi/CtenarskyDenik.WebApi.csproj
+++ b/src/CtenarskyDenik/CtenarskyDenik.WebApi/CtenarskyDenik.WebApi.csproj
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CtenarskyDenik.Application\CtenarskyDenik.Application.csproj" />
-    <ProjectReference Include="..\CtenarskyDenik.Core\CtenarskyDenik.Core.csproj" />
   </ItemGroup>
 
 </Project>
