--- a/src/CtenarskyDenik/CtenarskyDenik.WebApi/appsettings.json
+++ b/src/CtenarskyDenik/CtenarskyDenik.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=mysqlstudenti.litv.sssvt.cz;database=4c2_smelikfrantisek_db1;user=smelikfrantisek;password=123456;"
+    }
 }
