--- a/src/CtenarskyDenik/CtenarskyDenik.Core/CtenarskyDenik.Core.csproj
+++ b/src/CtenarskyDenik/CtenarskyDenik.Core/CtenarskyDenik.Core.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="9.2.0" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+  </ItemGroup>
+
 </Project>
