--- a/src/CtenarskyDenik/CtenarskyDenik.WebApi/appsettings.json
+++ b/src/CtenarskyDenik/CtenarskyDenik.WebApi/appsettings.json
@@ -1,11 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-    "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Server=mysqlstudenti.litv.sssvt.cz;database=4c2_smelikfrantisek_db1;user=smelikfrantisek;password=123456;"
     }
